# barista

./: angular.json  nx.json  package.json  postinstall.sh  tsconfig.json
apps/barista-design-system/: BUILD.bazel
apps/barista-design-system/src/app/: app.module.ts  app.routing.module.ts  app.ts
apps/barista-design-system/src/app/ba-decision-graph/: ba-decision-graph.component.html  ba-decision-graph.component.spec.ts  ba-decision-graph.component.ts
apps/barista-design-system/src/components/: components.module.ts
apps/barista-design-system/src/components/live-example/: live-example.ts
apps/barista-design-system/src/pages/decision-graph-page/: decision-graph-page.html  decision-graph-page.module.ts  decision-graph-page.ts
apps/barista-design-system/src/pages/decision-graph-page/components/ba-decision-graph/: ba-decision-graph.html  ba-decision-graph.scss  ba-decision-graph.spec.ts  ba-decision-graph.ts  index.ts
apps/barista-design-system/src/pages/decision-graph-page/components/ba-decision-graph/ba-decision-graph-node/: ba-decision-graph-node.html  index.ts  (+3 more)
apps/barista-design-system/src/pages/single-page/: single-page.html  single-page.module.ts  single-page.ts
apps/barista-design-system/src/pages/single-page/components/icon-overview-content/: icon-overview-content.ts
apps/barista-design-system/src/pages/single-page/components/toc/: toc.html  toc.ts
apps/barista-design-system/src/shared/scroll-spy/: scroll-spy.ts
apps/barista-design-system/src/shared/services/: scroll-spy.e2e.ts  scroll-spy.service.ts  toc.service.ts
apps/barista-design-system/src/utils/: create-component.ts
(+79 files in other folders)
