load("//tools/bazel_rules:index.bzl", "architect")

architect(
    name = "barista-design-system",
    data = glob(
        ["src/**/*"],
        exclude = [
            "src/**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ) + ["@npm//:node_modules",
        "browserslist",
        "tsconfig.app.json",
        "tsconfig.json",
        "@npm//@angular/cdk",
        "@npm//@angular/core",
        "@npm//@angular/common",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@dynatrace/barista-fonts",
        "@npm//@dynatrace/barista-icons",
        "@npm//highlight-ts",
        "@npm//lodash-es",
        "@npm//tslib",
        "@npm//zone.js",
        "//libs/barista-components/autocomplete",
        "//libs/barista-components/breadcrumbs",
        "//libs/barista-components/button",
        "//libs/barista-components/core",
        "//libs/barista-components/form-field",
        "//libs/barista-components/icon",
        "//libs/barista-components/input",
        "//libs/barista-components/overlay",
        "//libs/barista-components/style:style_scss_lib",
        "//libs/barista-components/switch",
        "//libs/barista-components/tag",
        "//libs/barista-components/theming",
        "//libs/barista-components/toast",
        "//libs/shared/barista-definitions",
    ],
    target = "barista-design-system:build-frontend",
)
